Fix: Fixed job z-index

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -382,11 +382,10 @@ label {
         width: 20px;
         height: 20px;
     }
-
+ 
     .job {
         width: 84%;
         gap: 60px 20px;
-        z-index: -1;
     }
 
     .load-more {
